--- a/628 module 3.ipynb
+++ b/628 module 3.ipynb
@@ -9,13 +9,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>useful</th>\n",
+       "      <th>funny</th>\n",
+       "      <th>cool</th>\n",
+       "      <th>text</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Q1sbwvVQXV2734tPgoKj4Q</td>\n",
+       "      <td>hG7b0MtEbXx5QzbzE6C_VA</td>\n",
+       "      <td>ujmEBvifdJM6h6RLv4wQIg</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Total bill for this horrible service? Over $8G...</td>\n",
+       "      <td>2013-05-07 04:34:36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GJXCdrto3ASJOqKeVWPi6Q</td>\n",
+       "      <td>yXQM5uF2jS6es16SJzNHfg</td>\n",
+       "      <td>NZnhc2sEQy3RmzKTZnqtwQ</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>I *adore* Travis at the Hard Rock's new Kelly ...</td>\n",
+       "      <td>2017-01-14 21:30:33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2TzJjDVDEuAW6MR5Vuc1ug</td>\n",
+       "      <td>n6-Gk65cPZL6Uz8qRm3NYw</td>\n",
+       "      <td>WTqjgwHlXbSFevF32_DJVw</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>I have to say that this office really has it t...</td>\n",
+       "      <td>2016-11-09 20:09:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>yi0R0Ugj_xUx_Nek0-_Qig</td>\n",
+       "      <td>dacAIZ6fTM6mqwW5uxkskg</td>\n",
+       "      <td>ikCg8xy5JIg_NGPx-MSIDA</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Went in for a lunch. Steak sandwich was delici...</td>\n",
+       "      <td>2018-01-09 20:56:38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11a8sVPMUFtaC7_ABRkmtw</td>\n",
+       "      <td>ssoyf2_x0EQMed6fgHeMyQ</td>\n",
+       "      <td>b1b1eb3uo-w561D0ZfCEiQ</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Today was my second out of three sessions I ha...</td>\n",
+       "      <td>2018-01-30 23:07:38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>fdiNeiN_hoCxCMy2wTRW9g</td>\n",
+       "      <td>w31MKYsNFMrjhWxxAb5wIw</td>\n",
+       "      <td>eU_713ec6fTGNO4BegRaww</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>I'll be the first to admit that I was not exci...</td>\n",
+       "      <td>2013-01-20 13:25:59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>G7XHMxG0bx9oBJNECG4IFg</td>\n",
+       "      <td>jlu4CztcSxrKx56ba1a5AQ</td>\n",
+       "      <td>3fw2X5bZYeW9xCz_zGhOHg</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Tracy dessert had a big name in Hong Kong and ...</td>\n",
+       "      <td>2016-05-07 01:21:02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8e9HxxLjjqc9ez5ezzN7iQ</td>\n",
+       "      <td>d6xvYpyzcfbF_AZ8vMB7QA</td>\n",
+       "      <td>zvO-PJCpNk4fgAVUnExYAA</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>This place has gone down hill.  Clearly they h...</td>\n",
+       "      <td>2010-10-05 19:12:35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>qrffudO73zsslZbe8B9D3Q</td>\n",
+       "      <td>sG_h0dIzTKWa3Q6fmb4u-g</td>\n",
+       "      <td>b2jN2mm9Wf3RcrZCgfo1cg</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>I was really looking forward to visiting after...</td>\n",
+       "      <td>2015-01-18 14:04:18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>RS_GTIT6836bCaPy637kNQ</td>\n",
+       "      <td>nMeCE5-xsdleyxYuNZ_7rA</td>\n",
+       "      <td>oxwGyA17NL6c5t1Etg5WgQ</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>It's a giant Best Buy with 66 registers.  I do...</td>\n",
+       "      <td>2012-02-29 21:52:43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                review_id                 user_id             business_id  \\\n",
+       "0  Q1sbwvVQXV2734tPgoKj4Q  hG7b0MtEbXx5QzbzE6C_VA  ujmEBvifdJM6h6RLv4wQIg   \n",
+       "1  GJXCdrto3ASJOqKeVWPi6Q  yXQM5uF2jS6es16SJzNHfg  NZnhc2sEQy3RmzKTZnqtwQ   \n",
+       "2  2TzJjDVDEuAW6MR5Vuc1ug  n6-Gk65cPZL6Uz8qRm3NYw  WTqjgwHlXbSFevF32_DJVw   \n",
+       "3  yi0R0Ugj_xUx_Nek0-_Qig  dacAIZ6fTM6mqwW5uxkskg  ikCg8xy5JIg_NGPx-MSIDA   \n",
+       "4  11a8sVPMUFtaC7_ABRkmtw  ssoyf2_x0EQMed6fgHeMyQ  b1b1eb3uo-w561D0ZfCEiQ   \n",
+       "5  fdiNeiN_hoCxCMy2wTRW9g  w31MKYsNFMrjhWxxAb5wIw  eU_713ec6fTGNO4BegRaww   \n",
+       "6  G7XHMxG0bx9oBJNECG4IFg  jlu4CztcSxrKx56ba1a5AQ  3fw2X5bZYeW9xCz_zGhOHg   \n",
+       "7  8e9HxxLjjqc9ez5ezzN7iQ  d6xvYpyzcfbF_AZ8vMB7QA  zvO-PJCpNk4fgAVUnExYAA   \n",
+       "8  qrffudO73zsslZbe8B9D3Q  sG_h0dIzTKWa3Q6fmb4u-g  b2jN2mm9Wf3RcrZCgfo1cg   \n",
+       "9  RS_GTIT6836bCaPy637kNQ  nMeCE5-xsdleyxYuNZ_7rA  oxwGyA17NL6c5t1Etg5WgQ   \n",
+       "\n",
+       "   stars  useful  funny  cool  \\\n",
+       "0    1.0       6      1     0   \n",
+       "1    5.0       0      0     0   \n",
+       "2    5.0       3      0     0   \n",
+       "3    5.0       0      0     0   \n",
+       "4    1.0       7      0     0   \n",
+       "5    4.0       0      0     0   \n",
+       "6    3.0       5      4     5   \n",
+       "7    1.0       3      1     1   \n",
+       "8    2.0       1      0     0   \n",
+       "9    3.0       1      0     1   \n",
+       "\n",
+       "                                                text                 date  \n",
+       "0  Total bill for this horrible service? Over $8G...  2013-05-07 04:34:36  \n",
+       "1  I *adore* Travis at the Hard Rock's new Kelly ...  2017-01-14 21:30:33  \n",
+       "2  I have to say that this office really has it t...  2016-11-09 20:09:03  \n",
+       "3  Went in for a lunch. Steak sandwich was delici...  2018-01-09 20:56:38  \n",
+       "4  Today was my second out of three sessions I ha...  2018-01-30 23:07:38  \n",
+       "5  I'll be the first to admit that I was not exci...  2013-01-20 13:25:59  \n",
+       "6  Tracy dessert had a big name in Hong Kong and ...  2016-05-07 01:21:02  \n",
+       "7  This place has gone down hill.  Clearly they h...  2010-10-05 19:12:35  \n",
+       "8  I was really looking forward to visiting after...  2015-01-18 14:04:18  \n",
+       "9  It's a giant Best Buy with 66 registers.  I do...  2012-02-29 21:52:43  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import json\n",
     "import pandas as pd\n",
-    "def readjson(filepath,count):\n",
+    "def readjson(filepath):\n",
     "    file = open(filepath, 'r', encoding='utf-8') \n",
+    "    for count,y in enumerate(file,start=1):\n",
+    "        pass\n",
+    "    file.close()\n",
+    "    file = open(filepath, 'r', encoding='utf-8')\n",
     "    dat={}\n",
     "    for i in range(1,count+1):\n",
     "        line=file.readline()\n",
@@ -30,8 +235,7 @@
     "    file.close()\n",
     "    data=pd.DataFrame(dat)\n",
     "    return data\n",
-    "\n",
-    "reviews=readjson(\"C:/Users/58479/Desktop/628/module3/Stat628/Stat628/review.json\",6685900)\n",
+    "reviews=readjson(\"C:/Users/58479/Desktop/628/module3/Stat628/Stat628/review.json\")\n",
     "reviews.head(10)"
    ]
   }
