Update 628 module 3.ipynb

--- a/628 module 3.ipynb
+++ b/628 module 3.ipynb
@@ -47,18 +47,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Q1sbwvVQXV2734tPgoKj4Q</td>\n",
-       "      <td>hG7b0MtEbXx5QzbzE6C_VA</td>\n",
-       "      <td>ujmEBvifdJM6h6RLv4wQIg</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Total bill for this horrible service? Over $8G...</td>\n",
-       "      <td>2013-05-07 04:34:36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>GJXCdrto3ASJOqKeVWPi6Q</td>\n",
        "      <td>yXQM5uF2jS6es16SJzNHfg</td>\n",
        "      <td>NZnhc2sEQy3RmzKTZnqtwQ</td>\n",
@@ -70,19 +58,7 @@
        "      <td>2017-01-14 21:30:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2TzJjDVDEuAW6MR5Vuc1ug</td>\n",
-       "      <td>n6-Gk65cPZL6Uz8qRm3NYw</td>\n",
-       "      <td>WTqjgwHlXbSFevF32_DJVw</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>I have to say that this office really has it t...</td>\n",
-       "      <td>2016-11-09 20:09:03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1</th>\n",
        "      <td>yi0R0Ugj_xUx_Nek0-_Qig</td>\n",
        "      <td>dacAIZ6fTM6mqwW5uxkskg</td>\n",
        "      <td>ikCg8xy5JIg_NGPx-MSIDA</td>\n",
@@ -94,19 +70,7 @@
        "      <td>2018-01-09 20:56:38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>11a8sVPMUFtaC7_ABRkmtw</td>\n",
-       "      <td>ssoyf2_x0EQMed6fgHeMyQ</td>\n",
-       "      <td>b1b1eb3uo-w561D0ZfCEiQ</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Today was my second out of three sessions I ha...</td>\n",
-       "      <td>2018-01-30 23:07:38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>2</th>\n",
        "      <td>fdiNeiN_hoCxCMy2wTRW9g</td>\n",
        "      <td>w31MKYsNFMrjhWxxAb5wIw</td>\n",
        "      <td>eU_713ec6fTGNO4BegRaww</td>\n",
@@ -118,19 +82,7 @@
        "      <td>2013-01-20 13:25:59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>G7XHMxG0bx9oBJNECG4IFg</td>\n",
-       "      <td>jlu4CztcSxrKx56ba1a5AQ</td>\n",
-       "      <td>3fw2X5bZYeW9xCz_zGhOHg</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Tracy dessert had a big name in Hong Kong and ...</td>\n",
-       "      <td>2016-05-07 01:21:02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>3</th>\n",
        "      <td>8e9HxxLjjqc9ez5ezzN7iQ</td>\n",
        "      <td>d6xvYpyzcfbF_AZ8vMB7QA</td>\n",
        "      <td>zvO-PJCpNk4fgAVUnExYAA</td>\n",
@@ -142,19 +94,7 @@
        "      <td>2010-10-05 19:12:35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>qrffudO73zsslZbe8B9D3Q</td>\n",
-       "      <td>sG_h0dIzTKWa3Q6fmb4u-g</td>\n",
-       "      <td>b2jN2mm9Wf3RcrZCgfo1cg</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>I was really looking forward to visiting after...</td>\n",
-       "      <td>2015-01-18 14:04:18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>4</th>\n",
        "      <td>RS_GTIT6836bCaPy637kNQ</td>\n",
        "      <td>nMeCE5-xsdleyxYuNZ_7rA</td>\n",
        "      <td>oxwGyA17NL6c5t1Etg5WgQ</td>\n",
@@ -165,46 +105,106 @@
        "      <td>It's a giant Best Buy with 66 registers.  I do...</td>\n",
        "      <td>2012-02-29 21:52:43</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-I5umRTkhw15RqpKMl_o1Q</td>\n",
+       "      <td>-mA3-1mN4JIEkqOtdbNXCQ</td>\n",
+       "      <td>mRUVMJkUGxrByzMQ2MuOpA</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Walked in around 4 on a Friday afternoon, we s...</td>\n",
+       "      <td>2017-12-15 23:27:08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>qlXw1JQ0UodW7qrmVgwCXw</td>\n",
+       "      <td>bAhqAPoWaZYcyYi7bs024Q</td>\n",
+       "      <td>LUN6swQYa4xJKaM_UEUOEw</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Michael from Red Carpet VIP is amazing ! I rea...</td>\n",
+       "      <td>2018-04-27 20:25:26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>svK3nBU7Rk8VfGorlrN52A</td>\n",
+       "      <td>NJlxGtouq06hhC7sS2ECYw</td>\n",
+       "      <td>YvrylyuWgbP90RgMqZQVnQ</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>You can't really find anything wrong with this...</td>\n",
+       "      <td>2017-04-07 21:27:49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>6BnQwlxRn7ZuWdzninM9sQ</td>\n",
+       "      <td>JSrP-dUmLlwZiI7Dp3PQ2A</td>\n",
+       "      <td>cHdJXLlKNWixBXpDwEGb_A</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>I love chinese food and I love mexican food. W...</td>\n",
+       "      <td>2015-04-01 16:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4bUyL7lzoWzDZaJETAKREg</td>\n",
+       "      <td>_N7Ndn29bpll_961oPeEfw</td>\n",
+       "      <td>y-Iw6dZflNix4BdwIyTNGA</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Good selection of classes of beers and mains. ...</td>\n",
+       "      <td>2014-06-27 21:19:23</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                review_id                 user_id             business_id  \\\n",
-       "0  Q1sbwvVQXV2734tPgoKj4Q  hG7b0MtEbXx5QzbzE6C_VA  ujmEBvifdJM6h6RLv4wQIg   \n",
-       "1  GJXCdrto3ASJOqKeVWPi6Q  yXQM5uF2jS6es16SJzNHfg  NZnhc2sEQy3RmzKTZnqtwQ   \n",
-       "2  2TzJjDVDEuAW6MR5Vuc1ug  n6-Gk65cPZL6Uz8qRm3NYw  WTqjgwHlXbSFevF32_DJVw   \n",
-       "3  yi0R0Ugj_xUx_Nek0-_Qig  dacAIZ6fTM6mqwW5uxkskg  ikCg8xy5JIg_NGPx-MSIDA   \n",
-       "4  11a8sVPMUFtaC7_ABRkmtw  ssoyf2_x0EQMed6fgHeMyQ  b1b1eb3uo-w561D0ZfCEiQ   \n",
-       "5  fdiNeiN_hoCxCMy2wTRW9g  w31MKYsNFMrjhWxxAb5wIw  eU_713ec6fTGNO4BegRaww   \n",
-       "6  G7XHMxG0bx9oBJNECG4IFg  jlu4CztcSxrKx56ba1a5AQ  3fw2X5bZYeW9xCz_zGhOHg   \n",
-       "7  8e9HxxLjjqc9ez5ezzN7iQ  d6xvYpyzcfbF_AZ8vMB7QA  zvO-PJCpNk4fgAVUnExYAA   \n",
-       "8  qrffudO73zsslZbe8B9D3Q  sG_h0dIzTKWa3Q6fmb4u-g  b2jN2mm9Wf3RcrZCgfo1cg   \n",
-       "9  RS_GTIT6836bCaPy637kNQ  nMeCE5-xsdleyxYuNZ_7rA  oxwGyA17NL6c5t1Etg5WgQ   \n",
+       "0  GJXCdrto3ASJOqKeVWPi6Q  yXQM5uF2jS6es16SJzNHfg  NZnhc2sEQy3RmzKTZnqtwQ   \n",
+       "1  yi0R0Ugj_xUx_Nek0-_Qig  dacAIZ6fTM6mqwW5uxkskg  ikCg8xy5JIg_NGPx-MSIDA   \n",
+       "2  fdiNeiN_hoCxCMy2wTRW9g  w31MKYsNFMrjhWxxAb5wIw  eU_713ec6fTGNO4BegRaww   \n",
+       "3  8e9HxxLjjqc9ez5ezzN7iQ  d6xvYpyzcfbF_AZ8vMB7QA  zvO-PJCpNk4fgAVUnExYAA   \n",
+       "4  RS_GTIT6836bCaPy637kNQ  nMeCE5-xsdleyxYuNZ_7rA  oxwGyA17NL6c5t1Etg5WgQ   \n",
+       "5  -I5umRTkhw15RqpKMl_o1Q  -mA3-1mN4JIEkqOtdbNXCQ  mRUVMJkUGxrByzMQ2MuOpA   \n",
+       "6  qlXw1JQ0UodW7qrmVgwCXw  bAhqAPoWaZYcyYi7bs024Q  LUN6swQYa4xJKaM_UEUOEw   \n",
+       "7  svK3nBU7Rk8VfGorlrN52A  NJlxGtouq06hhC7sS2ECYw  YvrylyuWgbP90RgMqZQVnQ   \n",
+       "8  6BnQwlxRn7ZuWdzninM9sQ  JSrP-dUmLlwZiI7Dp3PQ2A  cHdJXLlKNWixBXpDwEGb_A   \n",
+       "9  4bUyL7lzoWzDZaJETAKREg  _N7Ndn29bpll_961oPeEfw  y-Iw6dZflNix4BdwIyTNGA   \n",
        "\n",
        "   stars  useful  funny  cool  \\\n",
-       "0    1.0       6      1     0   \n",
+       "0    5.0       0      0     0   \n",
        "1    5.0       0      0     0   \n",
-       "2    5.0       3      0     0   \n",
-       "3    5.0       0      0     0   \n",
-       "4    1.0       7      0     0   \n",
-       "5    4.0       0      0     0   \n",
-       "6    3.0       5      4     5   \n",
-       "7    1.0       3      1     1   \n",
-       "8    2.0       1      0     0   \n",
-       "9    3.0       1      0     1   \n",
+       "2    4.0       0      0     0   \n",
+       "3    1.0       3      1     1   \n",
+       "4    3.0       1      0     1   \n",
+       "5    1.0       0      1     0   \n",
+       "6    4.0       0      0     0   \n",
+       "7    5.0       0      0     0   \n",
+       "8    3.0       1      7     1   \n",
+       "9    3.0       0      0     0   \n",
        "\n",
        "                                                text                 date  \n",
-       "0  Total bill for this horrible service? Over $8G...  2013-05-07 04:34:36  \n",
-       "1  I *adore* Travis at the Hard Rock's new Kelly ...  2017-01-14 21:30:33  \n",
-       "2  I have to say that this office really has it t...  2016-11-09 20:09:03  \n",
-       "3  Went in for a lunch. Steak sandwich was delici...  2018-01-09 20:56:38  \n",
-       "4  Today was my second out of three sessions I ha...  2018-01-30 23:07:38  \n",
-       "5  I'll be the first to admit that I was not exci...  2013-01-20 13:25:59  \n",
-       "6  Tracy dessert had a big name in Hong Kong and ...  2016-05-07 01:21:02  \n",
-       "7  This place has gone down hill.  Clearly they h...  2010-10-05 19:12:35  \n",
-       "8  I was really looking forward to visiting after...  2015-01-18 14:04:18  \n",
-       "9  It's a giant Best Buy with 66 registers.  I do...  2012-02-29 21:52:43  "
+       "0  I *adore* Travis at the Hard Rock's new Kelly ...  2017-01-14 21:30:33  \n",
+       "1  Went in for a lunch. Steak sandwich was delici...  2018-01-09 20:56:38  \n",
+       "2  I'll be the first to admit that I was not exci...  2013-01-20 13:25:59  \n",
+       "3  This place has gone down hill.  Clearly they h...  2010-10-05 19:12:35  \n",
+       "4  It's a giant Best Buy with 66 registers.  I do...  2012-02-29 21:52:43  \n",
+       "5  Walked in around 4 on a Friday afternoon, we s...  2017-12-15 23:27:08  \n",
+       "6  Michael from Red Carpet VIP is amazing ! I rea...  2018-04-27 20:25:26  \n",
+       "7  You can't really find anything wrong with this...  2017-04-07 21:27:49  \n",
+       "8  I love chinese food and I love mexican food. W...  2015-04-01 16:30:00  \n",
+       "9  Good selection of classes of beers and mains. ...  2014-06-27 21:19:23  "
       ]
      },
      "execution_count": 1,
@@ -216,13 +216,9 @@
     "import json\n",
     "import pandas as pd\n",
     "def readjson(filepath):\n",
-    "    file = open(filepath, 'r', encoding='utf-8') \n",
-    "    for count,y in enumerate(file,start=1):\n",
-    "        pass\n",
-    "    file.close()\n",
     "    file = open(filepath, 'r', encoding='utf-8')\n",
     "    dat={}\n",
-    "    for i in range(1,count+1):\n",
+    "    for i,y in enumerate(file,start=1):\n",
     "        line=file.readline()\n",
     "        dat_new=json.loads(line)\n",
     "        if i==1:\n",
