--- a/summary_module3.ipynb
+++ b/summary_module3.ipynb
@@ -77,10 +77,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "1 wordcloud picture."
+    "#1 wordcloud picture."
    ]
   },
   {
@@ -88,7 +90,7 @@
    "metadata": {},
    "source": [
     "### 3.2 Feature selection\n",
-    "In order to give recommendations for hotel business, the relative importance for each word is needed. Since the feature space has a high dimension, we choose lasso regression to select important features first. The selection of the parameter $\\lambda$ is shown below. We chose an $\\lambda$ with which only 50 words/phrases are selected in the final model."
+    "In order to give recommendations for American Traditional Restaurant business, the relative importance for each word is needed. Since the feature space has a high dimension, we choose lasso regression to select important features first. The selecting process of the parameter $\\lambda$ is shown below. We chose an $\\lambda$ with which only 50 words/phrases are selected in the final model."
    ]
   },
   {
@@ -97,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambda picture"
+    "#lambda picture"
    ]
   },
   {
@@ -137,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Tree picture"
+    "#Tree picture"
    ]
   },
   {
@@ -163,21 +165,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6 Conclusion"
+    "## 6 Discussion"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.1 Advantages"
+    "### 6.1 Advantages\n",
+    "1. Using Lasso regression to select features is a good way to deal with high dimensional problems and we can get coefficients from it.\n",
+    "2. Using tf-idf value, we strike a balance between frequency and the ability to do classification."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.2 Disadvantages"
+    "### 6.2 Disadvantages\n",
+    "1. Only negative tag can not identify all the negative reviews. Sentiment analysis can be considered in the future.\n",
+    "2. User data can be explored for later analysis."
    ]
   },
   {
