--- a/summary_module3.ipynb
+++ b/summary_module3.ipynb
@@ -193,7 +193,7 @@
     "### 7 Contributions\n",
     "- Chao Chang: Data merging and cleaning, report summary and shiny app.\n",
     "- Shuyang Chen: Word tokenization, feature selection and report summary.\n",
-    "- Kunning Wang: Word tokenization, CART and report summary.\n",
+    "- Kunning Wang: Word tokenization, CART, regression, report summary.\n",
     "- Youhui Ye: Lasso regression, word cloud, report summary and slides."
    ]
   },
